--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "update-sdk": "cd ../messembed-sdk && yarn build && cd ../github-messenger-client && yarn add link:./../messembed-sdk"
+    "update-sdk": "yarn add https://github.com/Messembed/node-messembed-sdk.git"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
