--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "messembed-sdk": "https://github.com/Messembed/node-messembed-sdk.git",
     "moment": "^2.29.1",
     "nuxt": "^2.14.6",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "socket.io-client": "^2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
@@ -34,6 +35,7 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
+    "@types/socket.io-client": "^1.4.35",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
